/*
 * Copyright 2018 The Feast Authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package feast.storage;

option java_outer_classname = "BigTableProto";
option java_package = "feast.storage";
option go_package = "github.com/gojek/feast/protos/generated/go/feast/storage";

message BigTableRowKey {
  // This should be the first 7 characters of a sha1 of the entityKey proto encoded
  string sha1Prefix = 1;
  string entityKey = 2;
  // This should be String.valueOf(int64.MAX_VALUE - roundToEntityGranularity(eventTimestamp))
  string reversedMillis = 3;
}
